#deploy: Очироо ахыг дүгнэх эрх нэмэх Тест